Fix scrollbar being transparent on OS X

--- a/src/xterm.css
+++ b/src/xterm.css
@@ -104,6 +104,8 @@
 }
 
 .terminal .xterm-viewport {
+    /* On OS X this is required in order for the scroll bar to appear fully opaque */
+    background-color: #000;
     overflow-y: scroll;
 }
 
